--- a/styles/header.css
+++ b/styles/header.css
@@ -9,6 +9,17 @@
 	border-bottom-right-radius: 50px;
 }
 
+.nav-open__icon-up {
+	display: none;
+}
+.nav-open__icon-down {
+	display: none;
+}
+
+.services-btn__icon {
+	width: 5px;
+}
+
 .header > .container {
 	flex: 1 1 100%;
 }
@@ -75,13 +86,16 @@
 	position: relative;
 }
 
+.communication-navigation {
+	display: none;
+}
+
 /* Скрываем выпадающее меню "Услуги" по умолчанию */
 .services-dropdown {
 	display: none;
 	position: absolute;
 	top: calc(100% + 8px);
 	left: 0;
-	background-color: white;
 	z-index: 3;
 	min-width: 320px;
 	height: auto;
@@ -94,7 +108,7 @@
 	gap: 8px;
 	color: #131313;
 	-webkit-text-fill-color: #131313;
-
+	background-color: #fff;
 	font-weight: 400;
 	font-style: Regular;
 	font-size: 16px;
@@ -161,7 +175,8 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	width: 10px;
+	max-width: 10px;
+	width: 100%;
 	height: 10px;
 	background: #2483ed33;
 	border-radius: 50%;
@@ -201,7 +216,6 @@
 	-webkit-text-fill-color: transparent;
 }
 
-.services-dropdown__el:last-child,
 .services-submenu__el:last-child {
 	border-bottom: none;
 }
@@ -211,7 +225,7 @@
 }
 
 .services-dropdown__el--has-children.open .services-link__circle-inner {
-	background: linear-gradient(135deg, #ff5fa2 0%, #ff7bbd 100%);
+	background: #e72d5c;
 }
 
 .services-dropdown__el--has-children.open .services-link__toggle span {
@@ -329,6 +343,13 @@
 	align-items: center;
 }
 
+.header-wrapper__icon-up {
+	display: none;
+}
+.header-wrapper__icon-down {
+	display: none;
+}
+
 .main-phone__element {
 	display: flex;
 	font-weight: 400;
@@ -388,7 +409,7 @@
 	content: '';
 	position: absolute;
 	inset: 0;
-	padding: 2.11px;
+	padding: 1px;
 	border-radius: 10px;
 	background: linear-gradient(91.91deg, #092b96 0%, #086cdc 100%);
 	-webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
@@ -483,7 +504,7 @@
 .navigation-wrapper {
 	display: flex;
 	align-items: center;
-	gap: 32px;
+	gap: 30px;
 }
 
 .navigation-close {
@@ -544,6 +565,7 @@
 		justify-content: center;
 		margin-right: 0;
 		order: 2;
+		z-index: 100;
 	}
 
 	.btn-section {
@@ -578,11 +600,28 @@
 		overflow-x: hidden;
 	}
 
+	.inner-header__wrapper {
+		width: 100%;
+		padding: 14px 16px 0 16px;
+		vertical-align: middle;
+	}
+
+	.header-wrapper__inner-header {
+		z-index: 100;
+		display: flex;
+		justify-content: space-between;
+		width: 100%;
+		position: relative;
+		padding-bottom: 16px;
+	}
+
 	.header {
 		border-bottom-left-radius: 24px;
 		border-bottom-right-radius: 24px;
-		padding: 14px 16px;
+		/* padding: 14px 16px; */
+		padding: 0;
 		position: relative;
+		/* box-shadow: none; */
 	}
 
 	.header-wrapper {
@@ -664,6 +703,22 @@
 		display: none;
 	}
 
+	.callus-dropdown {
+		display: none;
+		position: absolute;
+		top: 60px;
+		right: 0;
+		background: white;
+		border-radius: 12px;
+		padding: 15px;
+		box-shadow: 0 10px 20px #0001;
+		z-index: 99;
+	}
+
+	.callus-dropdown--active {
+		display: block;
+	}
+
 	.callus-btn--mobile.is-hidden {
 		display: none;
 	}
@@ -674,7 +729,8 @@
 		left: 0;
 		right: 0;
 		transform: none;
-		width: 100%;
+		width: calc(100%);
+
 		max-width: none;
 		box-sizing: border-box;
 		background: #ffffff;
@@ -684,7 +740,6 @@
 		flex-direction: column;
 		align-items: stretch;
 		display: none;
-		z-index: 20;
 	}
 
 	.navigation-wrapper.open {
@@ -708,7 +763,7 @@
 		justify-content: center;
 		width: 44px;
 		height: 44px;
-		border-radius: 14px;
+		border-radius: 12px;
 		border: 1.4px solid #0c6fde;
 		background: #f0f4f9;
 		cursor: pointer;
@@ -724,8 +779,8 @@
 		align-items: center;
 		justify-content: center;
 		gap: 10px;
-		padding: 12px 18px;
-		border-radius: 16px;
+		padding: 11px 17px 11px 20px;
+		border-radius: 10px;
 		border: none;
 		background: linear-gradient(132deg, #0b2f9a 0%, #2481eb 100%);
 		color: #ffffff;
@@ -794,38 +849,60 @@
 	.navigation {
 		flex-direction: column;
 		gap: 12px;
-		margin: 24px 0 18px;
-		align-items: stretch;
+		align-items: flex-start;
+		padding-bottom: 30px;
+		border-bottom: 1px solid #d6dde7;
+		width: 100%;
+		z-index: 100;
 	}
 
 	.navigation-el {
-		padding: 0;
 		border-bottom: none;
+		padding: 0;
+		width: 100%;
+	}
+	#services-btn {
+		text-align: left;
+		display: inline-block;
+		width: 100%;
+		margin: 0 auto;
+		padding: 7px 16px;
+		border-radius: 12px;
+		background: #f0f4f9;
+		color: #10224b;
+		font-weight: 400;
+		font-style: Regular;
+		font-size: 22px;
+		leading-trim: NONE;
+		line-height: 130%;
+		letter-spacing: 0%;
+	}
+
+	.services-btn__icon {
+		fill: url(#hoverGradient);
+		stroke: url(#hoverGradient);
+		width: 11px;
+	}
+
+	.navigation-el:hover {
+		border: none;
+		color: #131313;
+		padding: 0;
+		-webkit-text-fill-color: #131313;
 	}
 
 	.navigation-link {
-		width: calc(100% - 8px);
 		margin: 0 auto;
-		padding: 16px;
-		border-radius: 18px;
-		background: #eef3fc;
+		padding: 7px 16px;
+		border-radius: 12px;
+		background: #f0f4f9;
 		color: #10224b;
-		font-weight: 600;
-		justify-content: space-between;
-	}
-
-	.navigation-link::after {
-		content: '▸';
-		font-size: 12px;
-		color: inherit;
-	}
-
-	.services-dropdown__container > .navigation-link::after {
-		content: '▾';
-	}
-
-	.services-dropdown__container.open > .navigation-link::after {
-		content: '▴';
+		font-weight: 400;
+		font-style: Regular;
+		font-size: 22px;
+		leading-trim: NONE;
+		line-height: 130%;
+		letter-spacing: 0%;
 	}
 
 	.services-dropdown {
@@ -841,20 +918,35 @@
 	.services-dropdown__el {
 		width: 100%;
 		padding: 0;
-		background: #fff;
+		padding-left: 16px;
 		border: none;
+		border-bottom: 1px solid #d6dde7;
+		gap: 0px;
+		background-color: transparent;
+	}
+
+	.services-link__toggle {
+		padding: 5px 214px 5px 0px;
+		gap: 8px;
 	}
 
 	.services-dropdown__el a {
 		display: flex;
 		align-items: center;
-		gap: 12px;
 		width: 100%;
-		padding: 12px 16px 12px 16px;
-		border-radius: 14px;
-		background: #f5f7fd;
+		padding: 5px 24px 5px 8px;
 		font-weight: 500;
 		color: #10224b;
+	}
+
+	.services-dropdown__el a:hover {
+		border: none;
+		border-image: none;
+		border-image-slice: 0;
+		background: none;
+		-webkit-background-clip: none;
+		background-clip: none;
+		-webkit-text-fill-color: none;
 	}
 
 	.navigation-mobile-divider {
@@ -886,35 +978,112 @@
 		text-decoration: none;
 	}
 
-	.social-icon--instagram::before {
-		content: 'IG';
-	}
-
-	.social-icon--tiktok::before {
-		content: 'TT';
-	}
-
-	.social-icon--youtube::before {
-		content: 'YT';
-	}
-
-	.social-icon--facebook::before {
-		content: 'FB';
-	}
-
-	.social-icon--linkedin::before {
-		content: 'IN';
-	}
-
 	.btn-section {
 		display: none;
 	}
 
 	.search-bar {
-		display: none !important;
+		display: none;
 	}
 
 	body.no-scroll {
 		overflow: hidden;
+	}
+
+	.communication-navigation {
+		display: flex;
+		gap: 16px;
+		z-index: 100;
+	}
+
+	.communication-navigation__el {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		background: linear-gradient(91.91deg, #092b96 0%, #086cdc 100%);
+		border-radius: 12px;
+		width: 44px;
+		height: 44px;
+	}
+
+	.navigation-wrapper__bottomsection {
+		width: 100%;
+		display: flex;
+		gap: 30px;
+		flex-direction: column-reverse;
+		align-items: center;
+	}
+
+	.phone-btn__header-controls {
+		width: 44px;
+		height: 44px;
+
+		display: none;
+		align-items: center;
+		justify-content: center;
+		border-radius: 12px;
+		background: linear-gradient(91.91deg, #092b96 0%, #086cdc 100%);
+		border: none;
+	}
+	.phone-btn__header-controls.is-hidden {
+		display: flex;
+	}
+
+	.search-bar {
+		display: none;
+		margin-left: 16px;
+		margin-right: 16px;
+		z-index: 200;
+	}
+
+	.header-wrapper__icon-up {
+		position: absolute;
+		z-index: 99;
+
+		top: 0px;
+		left: 0px;
+		border-width: 19px;
+	}
+
+	.header-wrapper__icon-down {
+		z-index: 99;
+		position: absolute;
+		opacity: 1;
+		bottom: 0px;
+		right: 0px;
+		border-width: 19px;
+	}
+
+	.navigation-wrapper__innerContent {
+		z-index: 100;
+		display: flex;
+		flex-direction: column;
+		gap: 30px;
+	}
+
+	.nav-open__icon-up {
+		position: absolute;
+		opacity: 1;
+		top: 0;
+		right: 0;
+		border-width: 19px;
+		width: 100%;
+		border-width: 19px;
+		z-index: 100;
+	}
+
+	.nav-open__icon-down {
+		z-index: 100;
+		position: absolute;
+		width: 100%;
+		opacity: 1;
+		top: 520px;
+
+		right: 0;
+		/* bottom: 30px; */
+		border-width: 19px;
+		opacity: 1;
+
+		border-width: 19px;
 	}
 }
