--- a/styles/header.css
+++ b/styles/header.css
@@ -9,6 +9,14 @@
 	border-bottom-right-radius: 50px;
 }
 
+.phone-btn__header-controls__wrapper {
+	display: none;
+}
+
+.callus-dropdown__mobile {
+	display: none;
+}
+
 .nav-open__icon-up {
 	display: none;
 }
@@ -740,6 +748,7 @@
 		flex-direction: column;
 		align-items: stretch;
 		display: none;
+		min-height: 560px;
 	}
 
 	.navigation-wrapper.open {
@@ -1018,15 +1027,17 @@
 		width: 44px;
 		height: 44px;
 
-		display: none;
+		display: flex;
 		align-items: center;
 		justify-content: center;
 		border-radius: 12px;
 		background: linear-gradient(91.91deg, #092b96 0%, #086cdc 100%);
 		border: none;
 	}
-	.phone-btn__header-controls.is-hidden {
+	.phone-btn__header-controls__wrapper.is-hidden {
 		display: flex;
+		z-index: 100;
+		position: relative;
 	}
 
 	.search-bar {
@@ -1085,5 +1096,89 @@
 		opacity: 1;
 
 		border-width: 19px;
+	}
+
+	.callus-dropdown__mobile {
+		position: absolute;
+		top: calc(100% + 14px);
+		z-index: 101;
+		right: -56px;
+		padding: 8px 16px;
+		max-width: 252px;
+	}
+	.callus-dropdown__mobile::before {
+		content: '';
+		position: absolute;
+		inset: 0;
+		padding: 1px;
+		border-radius: 10px;
+		background: linear-gradient(91.91deg, #092b96 0%, #086cdc 100%);
+		-webkit-mask: linear-gradient(#fff 0 0) content-box,
+			linear-gradient(#fff 0 0);
+		-webkit-mask-composite: xor;
+		mask-composite: exclude;
+		z-index: -1;
+	}
+
+	.main-phone {
+		flex-direction: column;
+		width: 220px;
+		align-items: center;
+		gap: 2px;
+	}
+
+	.main-phone__element {
+		font-weight: 400;
+		font-style: Regular;
+		font-size: 16px;
+		leading-trim: NONE;
+		line-height: 150%;
+		letter-spacing: 0%;
+	}
+
+	.messagners-list {
+		width: 100%;
+		margin-top: 8px;
+		display: flex;
+		flex-direction: column;
+		gap: 8px;
+	}
+
+	.messagners-list li {
+		width: 100%;
+		display: flex;
+		gap: 12px;
+		padding: 4px;
+		background: linear-gradient(91.91deg, #092b96 0%, #086cdc 100%);
+		align-items: center;
+		padding-right: 0;
+		border-radius: 12px;
+	}
+
+	.messagners-list__icon {
+		background-color: #fff;
+		padding: 7px;
+		border-radius: 8px;
+	}
+
+	.messagners-list__link {
+		text-decoration: none;
+		font-weight: 500;
+		font-style: Medium;
+		font-size: 16px;
+		leading-trim: NONE;
+		line-height: 150%;
+		letter-spacing: 0%;
+		color: #f5f5f5;
+	}
+
+	.callus-dropdown__mobile-shedule {
+		margin-top: 10px;
+		font-weight: 400;
+		font-style: Regular;
+		font-size: 16px;
+		leading-trim: NONE;
+		line-height: 150%;
+		letter-spacing: 0%;
 	}
 }
